add structure complete

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               voluptatem quidem.
               Hic sed cum, dolorem molestias cupiditate beatae quae nemo recusandae? Minima perspiciatis illo eum iusto
               adipisci? Maxime, amet iure. Labore tempora expedita rem id nemo! Sapiente cupiditate magnam a quasi?</p>
-            <button type="button" class="btn btn-outline-light mt-4 "><i
+            <button type="button" class="btn btn-outline-light mt-4 mb-4"><i
                 class="fa-solid fa-download"></i>download</button>
 
           </div>
@@ -126,8 +126,8 @@
       </div>
     </div>
 
-    <div class="section4">
-      <div class="container-xl">
+    <div class="section4 pb-4">
+      <div class="container">
         <h2 class="text-center mt-5">CONTACT ME</h2>
         <div class="black-space"></div>
         <div class="text-center"><i class="fa-solid fa-star"></i></div>
@@ -140,12 +140,48 @@
         <hr>
         <div class="message">Message</div>
         <hr class="mt-5">
-        <button type="button" class="btn btn-success color">Send</button>
-
-
-
+        <button type="button" class="btn btn-success color mb-4">Send</button>
       </div>
     </div>
+
+    <div class="section5">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="content text-center mt-3">
+              <h3>LOCATION</h3>
+              <p>22 john wick house with piscine and cinema che bella vita</p>
+              <p>54243</p>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="content text-center mt-3">
+              <h3>AROUND THE WEB</h3>
+              <i class="fa-brands fa-facebook fs-5"></i>
+              <i class="fa-brands fa-google-plus-g fs-5" ></i>
+              <i class="fa-brands fa-twitter fs-5"></i>
+              <i class="fa-brands fa-linkedin-in fs-5"></i>
+            </div>
+          </div>
+          <div class="col-4">
+           <div class="content text-center mt-3">
+            <h3>ABOUT FREELANCER</h3>
+            Freelance is free to use,open surce Bootstrap theme created by <span class="color-b">Start Boostrap</span>
+           </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="section6">
+      <div class="container">
+        <p class="text-center p-5 ">copyright ° Your Website 2019</p>
+      </div>
+    </div>
+
+
+
 
 
 
