edit respondive section5

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Home</a>
+            <a class="nav-link " aria-current="page" href="#">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">ABOUT</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link disabled ">Disabled</a>
+            <a class="nav-link ">CONTACT</a>
           </li>
         </ul>
 
@@ -59,6 +59,9 @@
     <div class="section2 pb-5">
       <div class="container">
         <h2 class="text-center mt-5">PORTFOLIO</h2>
+        <div class="black-space"></div>
+        <div class="text-center"><i class="fa-solid fa-star "></i></div>
+        <div class="black-space mb-3"></div>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3">
           <div class="col ">
@@ -146,15 +149,15 @@
 
     <div class="section5">
       <div class="container">
-        <div class="row">
-          <div class="col-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+          <div class="col">
             <div class="content text-center mt-3">
               <h3>LOCATION</h3>
               <p>22 john wick house with piscine and cinema che bella vita</p>
               <p>54243</p>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col">
             <div class="content text-center mt-3">
               <h3>AROUND THE WEB</h3>
               <i class="fa-brands fa-facebook fs-5"></i>
@@ -163,7 +166,7 @@
               <i class="fa-brands fa-linkedin-in fs-5"></i>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col">
            <div class="content text-center mt-3">
             <h3>ABOUT FREELANCER</h3>
             Freelance is free to use,open surce Bootstrap theme created by <span class="color-b">Start Boostrap</span>
