edit navbar fixed top

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg fixed-top  " data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" href="#">START BOOSTRAP</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -45,7 +45,7 @@
 
 
   <main>
-    <section class="section1 py-4 text-light text-center ">
+    <section class="section1 py-4 text-light text-center mt-5 ">
       <div class="container ">
         <img src="bootstrap_freelancer/img/avatar.svg" alt="">
         <h1>STAR BOOSTRAP</h1>
