edit img-fluid section2

--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3">
           <div class="col ">
             <div class="content">
-              <img src="bootstrap_freelancer/img/cabin.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/cabin.png" alt="">
             </div>
           </div>
           <div class="col">
             <div class="content ">
-              <img src="bootstrap_freelancer/img/cake.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/cake.png" alt="">
             </div>
           </div>
           <div class="col">
             <div class="content">
-              <img src="bootstrap_freelancer/img/circus.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/circus.png" alt="">
             </div>
           </div>
           <div class="col">
             <div class="content">
-              <img src="bootstrap_freelancer/img/game.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/game.png" alt="">
             </div>
           </div>
           <div class="col">
             <div class="content">
-              <img src="bootstrap_freelancer/img/safe.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/safe.png" alt="">
             </div>
           </div>
           <div class="col">
             <div class="content">
-              <img src="bootstrap_freelancer/img/submarine.png" alt="">
+              <img class="img-fluid" src="bootstrap_freelancer/img/submarine.png" alt="">
             </div>
           </div>
 
