--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
               voluptatem quidem.
               Hic sed cum, dolorem molestias cupiditate beatae quae nemo recusandae? Minima perspiciatis illo eum iusto
               adipisci? Maxime, amet iure. Labore tempora expedita rem id nemo! Sapiente cupiditate magnam a quasi?</p>
-            </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-outline-light mt-4 mb-4"><i
-                  class="fa-solid fa-download"></i>download</button>
-            </div>
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn btn-outline-light mt-4 mb-4"><i
+                class="fa-solid fa-download"></i>download</button>
+          </div>
 
         </div>
       </div>
@@ -149,7 +149,8 @@
         <button type="button" class="btn btn-success color mb-4">Send</button>
       </div>
     </div>
-
+  </main>
+  <footer>
     <div class="section5">
       <div class="container">
         <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-3">
@@ -163,16 +164,17 @@
           <div class="col">
             <div class="content text-center mt-3">
               <h3>AROUND THE WEB</h3>
-              <i class="fa-brands fa-facebook fs-5"></i>
-              <i class="fa-brands fa-google-plus-g fs-5"></i>
-              <i class="fa-brands fa-twitter fs-5"></i>
-              <i class="fa-brands fa-linkedin-in fs-5"></i>
+              <i class="fa-brands fa-facebook fs-5 p-2"></i>
+              <i class="fa-brands fa-google-plus-g fs-5 p-2"></i>
+              <i class="fa-brands fa-twitter fs-5 p-2"></i>
+              <i class="fa-brands fa-linkedin-in fs-5 p-2"></i>
             </div>
           </div>
           <div class="col">
             <div class="content text-center mt-3">
               <h3>ABOUT FREELANCER</h3>
-              Freelance is free to use,open surce Bootstrap theme created by <span class="color-b">Start Boostrap</span>
+              Freelance is free to use,open surce Bootstrap theme created by <span class="color-b">Start
+                Boostrap</span>
             </div>
           </div>
         </div>
@@ -185,6 +187,7 @@
         <p class="text-center p-5 ">copyright ° Your Website 2019</p>
       </div>
     </div>
+  </footer>
 
 
 
@@ -202,7 +205,6 @@
 
 
 
-  </main>
 
 
 
