edit border icon section5

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
           <div class="col">
             <div class="content text-center mt-3">
               <h3>AROUND THE WEB</h3>
-              <i class="fa-brands fa-facebook fs-5 p-2"></i>
-              <i class="fa-brands fa-google-plus-g fs-5 p-2"></i>
-              <i class="fa-brands fa-twitter fs-5 p-2"></i>
-              <i class="fa-brands fa-linkedin-in fs-5 p-2"></i>
+              <i class="fa-brands fa-facebook fs-5 p-2 rounded-circle border border-white"></i>
+              <i class="fa-brands fa-google-plus-g fs-5 p-2 rounded-circle border border-white"></i>
+              <i class="fa-brands fa-twitter fs-5 p-2 rounded-circle border border-white"></i>
+              <i class="fa-brands fa-linkedin-in fs-5 p-2 rounded-circle border border-white"></i>
             </div>
           </div>
           <div class="col">
